--- a/momsite/detail.html
+++ b/momsite/detail.html
@@ -31,7 +31,7 @@
     $("#text > h1").text(img.getTitle());
     $("#text > p").text(img.description);
 
-    $("#leftlink").attr("href", "/detail.html?id=" + (id - 1).toString());
-    $("#rightlink").attr("href", "/detail.html?id=" + (id + 1).toString());
+    $("#leftlink").attr("href", "/momsite/detail.html?id=" + (id - 1).toString());
+    $("#rightlink").attr("href", "/momsite/detail.html?id=" + (id + 1).toString());
 </script>
 </html>
