--- a/momsite/gallery.html
+++ b/momsite/gallery.html
@@ -69,7 +69,7 @@
     for (var index in imgs) {
         var img_id = (Number.parseInt(index) + 1);
         var img = imgs[index];
-        addImageToDiv(img, index < 8 ? $("#leftnav") : $("#rightnav"), "/gallery.html?id=" + img_id.toString(), img_id === id);
+        addImageToDiv(img, index < 8 ? $("#leftnav") : $("#rightnav"), "/momsite/gallery.html?id=" + img_id.toString(), img_id === id);
     }
 
     //$("#leftlink").attr("href", "/gallery.html?id=" + (id - 1).toString());
