--- a/momsite/gallery.html
+++ b/momsite/gallery.html
@@ -1,78 +1,128 @@
 ﻿<!DOCTYPE html>
+<!--Copyright © Sam Savage 2016-->
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Circles of Life Gallary</title>
+    <title>Circles of Life Gallery</title>
     <link rel="stylesheet" href="app.css" type="text/css" />
     <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
     <script src="data.js"></script>
+    <!--<script src="http://mrcoles.com/media/js/scroll-sneak.js"></script>-->
     <!--load header-->
-    <script>
+    <!--<script>
         $(function () {
             // source: http://stackoverflow.com/a/9003363
             $("#headerDiv").load("header.html");
         });
-    </script>
+    </script>-->
 </head>
-<body style="background:black">
+<body>
     <div id="headerDiv"></div>
     <center>
-        <div style="max-width:1024px">
+        <div style="max-width:1280px">
             <div id="leftnav"></div>
             <div id="rightnav"></div>
             <div id="centerimage"></div>
 
             <div id="detailsdiv">
                 <h1>Image Title</h1>
-                <p style="color:white">Image Description</p>
+                <div>Image Description</div>
             </div>
         </div>
     </center>
+    <!--a modal window:  http://www.w3schools.com/howto/howto_css_modal_images.asp-->
+    <div id="galleryModal" class="modal" onclick="document.getElementById('galleryModal').style.display = 'none'">
+        <!--<span class="modal-close" onclick="document.getElementById('galleryModal').style.display = 'none'">&times;</span>-->
+        <img class="modal-content" />
+        <div class="modal-caption"></div>
+    </div>
 </body>
 <script>
+    /* parse the parameters */
+    //source:  http://stackoverflow.com/a/2880929
+    var urlParams;
+    (window.onpopstate = function () {
+        var match,
+            pl = /\+/g,  // Regex for replacing addition symbol with a space
+            search = /([^&=]+)=?([^&]*)/g,
+            decode = function (s) { return decodeURIComponent(s.replace(pl, " ")); },
+            query = window.location.search.substring(1);
+
+        urlParams = {};
+        while (match = search.exec(query))
+            urlParams[decode(match[1])] = decode(match[2]);
+    })();
+
+    /* this function adds a new thumbnail to the columns */
     function addImageToDiv(img, div, link, selected) {
-
-
+        /* add the gallery link to the thumbnails */
+        var link_element =
         $('<a/>', {
             'href': link,
             html: $('<img/>', {
-                'src': img.fileName,
-                'alt': img.getTitle(),
+                'src': img.getImageFileName(),
+                'alt': "gallery image " + img.imageId,
                 'class': selected ? "selected" : ""
+            })
+        });
+        /* add the current scroll value when the thumbnail is clicked */
+        link_element.click(function (e) {
+            if ($(window).scrollTop() > 0) {
+                $(link_element).attr('href', function () {
+                    return this.href + '&scroll=' + $(window).scrollTop();
+                });
             }
-            )
-
-        }).appendTo(div);
-
-
-        //<a class="vlightbox1" href="image1.jpg"
-        //var img_el = document.createElement('img');
-        //img_el.src = img.fileName;
-        //img_el.alt = img.getTitle();
-        //div.append(img_el);
+        });
+        link_element.appendTo(div);
         return;
     }
+
+    /* parse the image id from the location string */
     var idstring = location.search;
     var idstringsplit = idstring ? idstring.split("=") : idstring;
     var id = (idstringsplit && idstringsplit.length && idstringsplit.length > 1) ? Number.parseInt(idstringsplit[1]) : 1;
     var img = imgs[id - 1];
-    console.log(id);
-    console.log(img);
-    console.log(imgs);
-    var img_el = document.createElement('img');
-    img_el.src = img.fileName;
-    img_el.alt = img.getTitle();
-    $("#centerimage").append(img_el);
-    $("#detailsdiv > h1").text(img.getTitle());
-    $("#detailsdiv > p").text(img.description);
 
+    /* add the image to the center element */
+    var img_el = document.createElement('img');
+    img_el.src = img.getImageFileName();
+    img_el.alt = "gallery image " + id.toString();
+    $("#centerimage").append(img_el);
+
+    /* load the description for the current image */
+    $("#detailsdiv > div").load(img.getDescriptionFileName() + " .MsoNormal",
+        function (resp, status) {
+            if (status == "error") {
+                $("#detailsdiv").remove();
+            }
+            else {
+                console.log($("#detailsdiv > div"));
+                var title = $("#detailsdiv > div").find(".MsoNormal:first-child");
+                var title_string = title.html();
+                title.remove();
+                $("#detailsdiv > h1").html(title_string);
+                $("#galleryModal > .modal-caption").html(title_string);
+            }
+        });
+
+    /* add all the images to the left and right columns */
     for (var index in imgs) {
         var img_id = (Number.parseInt(index) + 1);
         var img = imgs[index];
-        addImageToDiv(img, index < 8 ? $("#leftnav") : $("#rightnav"), "/momsite/gallery.html?id=" + img_id.toString(), img_id === id);
+        addImageToDiv(img, index < (imgs.length / 2) ? $("#leftnav") : $("#rightnav"), "gallery.html?id=" + img_id.toString(), img_id === id);
     }
 
-    //$("#leftlink").attr("href", "/gallery.html?id=" + (id - 1).toString());
-    //$("#rightlink").attr("href", "/gallery.html?id=" + (id + 1).toString());
+    /* scroll the window down */
+    if (urlParams.scroll) {
+        $(window).scrollTop(parseInt(urlParams.scroll));
+        console.log("scrolling to " + urlParams.scroll);
+    }
+
+    /* set the current image to use the modal when clicked */
+    $("#galleryModal > .modal-content").attr("src", imgs[id - 1].getImageFileName());
+    $("#centerimage").click(function () {
+        $("#galleryModal").show();
+    });
+
 </script>
 </html>
