--- a/momsite/index.html
+++ b/momsite/index.html
@@ -2,6 +2,7 @@
 <!--Copyright © Sam Savage 2016-->
 <html lang="en">
 <head>
+    <meta http-equiv="refresh" content="0; url=gallery.html" />
     <meta charset="utf-8" />
     <title>Circles of Life</title>
     <link rel="stylesheet" href="app.css" type="text/css" />
