--- a/momsite/about.html
+++ b/momsite/about.html
@@ -17,7 +17,8 @@
         simpleCart({
             checkout: {
                 type: "PayPal",
-                email: "you@yours.com"
+                email: "antimetabole-facilitator@gmail.com",
+                sandbox: true
             },
             cartStyle: "table"
         });
