--- a/momsite/gallery.html
+++ b/momsite/gallery.html
@@ -20,17 +20,18 @@
         simpleCart({
             checkout: {
                 type: "PayPal",
-                email: "you@yours.com"
+                email: "antimetabole-facilitator@gmail.com",
+                sandbox: true
             },
             cartStyle: "table"
         });
 
         simpleCart.bind('beforeAdd', function (item) {
-            if (item.get('size') == 'Card') {
+            if (item.get("type") == "Card") {
                 item.price(5.99);
-            } else if (item.get('size') == 'Medium Print') {
+            } else if (item.get("type") == "Medium Print") {
                 item.price(35.99);
-            } else if (item.get('size') == 'Large Print') {
+            } else if (item.get("type") == "Large Print") {
                 item.price(123.99);
             }
         });
@@ -47,7 +48,7 @@
             <div id="detailsdiv">
                 <div class="simpleCart_shelfItem">
                     <p>
-                        <select class="item_size" style="background:black; color:white">
+                        <select class="item_type" style="background:black; color:white">
                             <option value="Card"> Card for <span class="item_price">$5.99</span> </option>
                             <option value="Medium Print"> 11x11 Print for <span class="item_price">$35.99</span> </option>
                             <option value="Large Print"> 18x18 Print for <span class="item_price">$123.99</span> </option>
