--- a/momsite/testimonials.html
+++ b/momsite/testimonials.html
@@ -18,7 +18,7 @@
         simpleCart({
             checkout: {
                 type: "PayPal",
-                email: "you@yours.com"
+                email: "antimetabole-facilitator@gmail.com"
             },
             cartStyle: "table"
         });
